@@ -1,3 +1,8 @@
+2009-03-28  Naohiro Aota  <naota@elisp.net>
+
+	* w3m.el (w3m-goto-url-with-timer): When going to the same url, use
+	`w3m-reload-this-page'.
+
 2009-03-18  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-link-menu): Always provide title string.  Suggested by
